---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "2920182694213909827": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      },
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "7233212735005103307": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "14514982005979867414": {
        "error_kind": "string",
        "string": "attempt to bit-shift with overflow"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/+1cy1YbRxCtAfE2NrbEGxKR2Imd2Mm0HjACY4gfYPwidsLJ2sRim3W+I+t8UH4i+/xF1NAFpVaLxMwt0sNJnaPTomco3Vt1q7pn0JDQiR10Xr+690nnNehGa1VvLnFz0gbcuO3GNJ8ZpK9E+Kqnq41Ge63WNnXzPq21DrNm2mgermYmM82s+aGW1evtrJGttQ5ba2nLNOptc9Rs1dtHx9Y8j/NFfR85oJFyPmRNoPObiFhisLZXS3SmYd/QHBKcr1TiHdIEPAQMOgu35LAOkH7Qgb5STZxIcci4DrtxhEFzV7YTVeq2QUVSeUUzAvQ1CvQlYzoqYuoLBPE5NpmaKycyR2lOI2HoYhsG4rwKK8iYJuAx8UHbIKH9v4L04tRaQcbdOMGgudvZA1XqtphXkAmgr2uks4JcI90VxOYs5hVkgopRbAgtueulNl8j+9fPfN08Sd2G5jIJzJ/EqXm9m9fXdUD8jpxpckb2vxtAzlKz14Vmb7j3U3S+ZvNymcJxafBGol/93fwHLmk+MzcJ1kvWrsLGiJA4Tfdm5pYbyxwQXnjtgTlvzp406oFCb3AIlvzU3CJcgZVxHC91t47D3b40UVbcOE2eACt01ol4zp6kLcoy4URZIZwop4HJtaIcELGTFq8oFTtlmmaKvmuJiC3rd6bzmqWTxjvfeS10Xoud11Lntcwns/BnqLcYZgNzc4G5+cDcQmBuMTC3FJhbpt4bPmPYgEGKkAtnhmBbjKNZnK8PczhfrXmcL7MA89U2izBfP5slmK/MLBO2KYGbZm3Z1Rn4dkVjGVhXnwD5KsTQKMWwhozhp0C+JAx9Kb4E9FUFc0bf0rNcgdo2NsdVwt8GWKG4e5jFt6LA+7O4eRst3p+DebOhe8Ui0NdtirtXWK5APRqb49sK2rlDcfcKi++OAu8v4uZttHh/ScXoFQtAX3cp7l5huQL1aGyO7ypo5x7F3SssvnsKvL+Km7fR4v01FaNXzAN93ae4e4XlCtSjsTm+r6CdBxR3r7D4Hijw/iZu3kaL97dUjF4xB/SVUty9wnIF6tHYHKcK2jEUd6+w+IwC71rcvI0W7zoVo1fMAn01KO5eYbkC9WhsjhsK2mlS3L3C4msq8F6Nm7fR4r1GxegVM0BfGWF7hRZn5JdYWhR3f7T5BdagsbrOFOplneLuEzbP6wq8N4C8Q9/M03guZUP4R2GngOX0bfiNjMdDN25ycPhLQPbAn8pBAzWymhOPeQgU4iYVY8FCcn4U4HxRn1JLj5yWPuZpQmRcEFzYtjQBb1H/Fe+i/rcIV7jbQL6aSU/AMdwm3dUY1axQuyX2i8z3d8AYyuZi/a5Qt2nsdpC618K5CcB58g3Kw9ZlPvqN3O1KvI81AT8WH5Q36P/Fo98J6exwYhaHjOsTNz5l0NxR7ESVug39EMo6UDRPgb6eAX3JmD4jvUe/110y0fcKEqUcpTmNhKGL7Qlhm5nEKA2dK6SekI1Rct/RJL8DDsCOAI7ye97qdsUFcXrzJUBd5cbOrhufE3WvbrvU+8SXPanqgSphwJ2C1EpI3ptGu0Bcz4HJ/JhiQVyToPJcxGLZc+MLou7C2KPeYrEnVT1QpYIkJG+x7AE5vgALBb2t3HX5B69MNWTDeYnDpfJnIsv1JZ2ZJtZY842smVeR59tyfaWQm9dAX5d5Y+s1zlfXpcQbTcBvFPzuE3Zx1OC9LwIM8qvWVPcJX2Tfg3mzoXeryIb6FpiXENc0nx03VGBeatbXWwXtvKO4a8byfqfA+wcqRs0g+++P4JopyibkAJxrdK+wOQbq0dg8H9CZ5Y1jW/x7xZKnc6kD6jP3kxtn/vq9vPHbL3/wPP9tZswbp4WPQWBc2H9Fx//xPxr3bVq8r3g8ZQy3QRj82A5Rrw14x/jcUQ9fgsdnfCyDgc9iK7uxIuam+2AdF36AOa2x/wkd/0HNjIv3E94xzl0p8HtJn58HvPG8c8+r5cnAMfbJuZJ4mQf/q1KO5ZDwi4wl+x/W8X/aP0Z0/NdDWpBzfr3KXCUeJr+ngrG+TwL4/H7uY5TnhPTr3zH315rBf3FuSL98bIp68fm/NxbAKudYW6Fa8PPCPWqoj68RcVyeP+Kdq5XDcgATY/8b6nLoiVNrAAA=",
  "debug_symbols": "1ZrdbtowGIbvJccc2J+/P3MrU1XRllZICBA/kybUex9lOGPGU4S0t0sPQ/I+eQN+jBT72L3Mnw5vj4vV63rXTb8du+X6ebZfrFeno2NH5492m9nq42i3n2333ZSyTrr56qWbJqL3Sfe6WM67qYT3h0mXWoGU+oDWAW4GrAQ41AFpBThaCRBfByY3l8bscrmWQsgVXaF0g9IdSs9QegxYfMTiqY3vRzHXozg2RWHpC+lAIYqBS6FIXuMZixcsXrF4w+Idi89QPLVFlH4oez2Uqe1W9ktCggwUIsqlEEmq8W23cnleIakTTbeEQ0mwDRRKQqXQ6a+oxjMWL1h80y1J5RcQtTrR1EW83EQ8DxRiKz8WSYg13tv4eInozWxLTQM09YlUD+oU7k7EuxN0d6I5TpWknWh8sZJ7kzXW4iTG4gWLVyzesHjH4jMUzwGLj1g8YfFYaxlrLWOtZay1jLWWsdYy1lrBWitYawVrrWCtFay1grVWsNYK1lrBWitYaxVrrWKtVay1irVWsdYq1lrFWqtYaxVrrWKtNay1hrXWsNYa1lrDWmtYaw1rrWGtNay1hrXWsdY61lrHWutYax1rrWOtday1jrXW/2JtiajWr9C9LaKXl9Ca00AhC2XFgOzmDX0OWHzE4gmLT1g8Y/GCxbdFtLJ8YRTqRNMtS8Utk5uVbr870dTFrAhmHgceOsd+eTnTwHqKMPVrL5yuVvt+LaSHEXWJI+pCI+qSPreLc98la92FR9RFRtRFR9SlPSNZKl1yPU/G9oaaeJpdL5mY/txaddspEZWLEw2tOqffD5AkxuoB2vtv/lsbGlWbNKo2/A/aWOzbfKIl7V1JX6O6Iauf7+DwO2T0HejeOe3hdPC0XSyXi7fH632tp4+/z7aL2dNyfjl8Payer87uf2zKmZLfbNfP85fDdv5BOp874X8C",
  "file_map": {
    "5": {
      "source": "use crate::meta::derive_via;\n\n#[derive_via(derive_eq)]\n// docs:start:eq-trait\npub trait Eq {\n    fn eq(self, other: Self) -> bool;\n}\n// docs:end:eq-trait\n\n// docs:start:derive_eq\ncomptime fn derive_eq(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn eq(_self: Self, _other: Self) -> bool };\n    let for_each_field = |name| quote { (_self.$name == _other.$name) };\n    let body = |fields| {\n        if s.fields_as_written().len() == 0 {\n            quote { true }\n        } else {\n            fields\n        }\n    };\n    crate::meta::make_trait_impl(\n        s,\n        quote { Eq },\n        signature,\n        for_each_field,\n        quote { & },\n        body,\n    )\n}\n// docs:end:derive_eq\n\nimpl Eq for Field {\n    fn eq(self, other: Field) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for u128 {\n    fn eq(self, other: u128) -> bool {\n        self == other\n    }\n}\nimpl Eq for u64 {\n    fn eq(self, other: u64) -> bool {\n        self == other\n    }\n}\nimpl Eq for u32 {\n    fn eq(self, other: u32) -> bool {\n        self == other\n    }\n}\nimpl Eq for u16 {\n    fn eq(self, other: u16) -> bool {\n        self == other\n    }\n}\nimpl Eq for u8 {\n    fn eq(self, other: u8) -> bool {\n        self == other\n    }\n}\nimpl Eq for u1 {\n    fn eq(self, other: u1) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for i8 {\n    fn eq(self, other: i8) -> bool {\n        self == other\n    }\n}\nimpl Eq for i16 {\n    fn eq(self, other: i16) -> bool {\n        self == other\n    }\n}\nimpl Eq for i32 {\n    fn eq(self, other: i32) -> bool {\n        self == other\n    }\n}\nimpl Eq for i64 {\n    fn eq(self, other: i64) -> bool {\n        self == other\n    }\n}\n\nimpl Eq for () {\n    fn eq(_self: Self, _other: ()) -> bool {\n        true\n    }\n}\nimpl Eq for bool {\n    fn eq(self, other: bool) -> bool {\n        self == other\n    }\n}\n\nimpl<T, let N: u32> Eq for [T; N]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T; N]) -> bool {\n        let mut result = true;\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<T> Eq for [T]\nwhere\n    T: Eq,\n{\n    fn eq(self, other: [T]) -> bool {\n        let mut result = self.len() == other.len();\n        for i in 0..self.len() {\n            result &= self[i].eq(other[i]);\n        }\n        result\n    }\n}\n\nimpl<let N: u32> Eq for str<N> {\n    fn eq(self, other: str<N>) -> bool {\n        let self_bytes = self.as_bytes();\n        let other_bytes = other.as_bytes();\n        self_bytes == other_bytes\n    }\n}\n\nimpl<A, B> Eq for (A, B)\nwhere\n    A: Eq,\n    B: Eq,\n{\n    fn eq(self, other: (A, B)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1)\n    }\n}\n\nimpl<A, B, C> Eq for (A, B, C)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n{\n    fn eq(self, other: (A, B, C)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2)\n    }\n}\n\nimpl<A, B, C, D> Eq for (A, B, C, D)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n{\n    fn eq(self, other: (A, B, C, D)) -> bool {\n        self.0.eq(other.0) & self.1.eq(other.1) & self.2.eq(other.2) & self.3.eq(other.3)\n    }\n}\n\nimpl<A, B, C, D, E> Eq for (A, B, C, D, E)\nwhere\n    A: Eq,\n    B: Eq,\n    C: Eq,\n    D: Eq,\n    E: Eq,\n{\n    fn eq(self, other: (A, B, C, D, E)) -> bool {\n        self.0.eq(other.0)\n            & self.1.eq(other.1)\n            & self.2.eq(other.2)\n            & self.3.eq(other.3)\n            & self.4.eq(other.4)\n    }\n}\n\nimpl Eq for Ordering {\n    fn eq(self, other: Ordering) -> bool {\n        self.result == other.result\n    }\n}\n\n// Noir doesn't have enums yet so we emulate (Lt | Eq | Gt) with a struct\n// that has 3 public functions for constructing the struct.\npub struct Ordering {\n    result: Field,\n}\n\nimpl Ordering {\n    // Implementation note: 0, 1, and 2 for Lt, Eq, and Gt are built\n    // into the compiler, do not change these without also updating\n    // the compiler itself!\n    pub fn less() -> Ordering {\n        Ordering { result: 0 }\n    }\n\n    pub fn equal() -> Ordering {\n        Ordering { result: 1 }\n    }\n\n    pub fn greater() -> Ordering {\n        Ordering { result: 2 }\n    }\n}\n\n#[derive_via(derive_ord)]\n// docs:start:ord-trait\npub trait Ord {\n    fn cmp(self, other: Self) -> Ordering;\n}\n// docs:end:ord-trait\n\n// docs:start:derive_ord\ncomptime fn derive_ord(s: TypeDefinition) -> Quoted {\n    let signature = quote { fn cmp(_self: Self, _other: Self) -> std::cmp::Ordering };\n    let for_each_field = |name| quote {\n        if result == std::cmp::Ordering::equal() {\n            result = _self.$name.cmp(_other.$name);\n        }\n    };\n    let body = |fields| quote {\n        let mut result = std::cmp::Ordering::equal();\n        $fields\n        result\n    };\n    crate::meta::make_trait_impl(s, quote { Ord }, signature, for_each_field, quote {}, body)\n}\n// docs:end:derive_ord\n\n// Note: Field deliberately does not implement Ord\n\nimpl Ord for u128 {\n    fn cmp(self, other: u128) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\nimpl Ord for u64 {\n    fn cmp(self, other: u64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u32 {\n    fn cmp(self, other: u32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u16 {\n    fn cmp(self, other: u16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for u8 {\n    fn cmp(self, other: u8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i8 {\n    fn cmp(self, other: i8) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i16 {\n    fn cmp(self, other: i16) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i32 {\n    fn cmp(self, other: i32) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for i64 {\n    fn cmp(self, other: i64) -> Ordering {\n        if self < other {\n            Ordering::less()\n        } else if self > other {\n            Ordering::greater()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl Ord for () {\n    fn cmp(_self: Self, _other: ()) -> Ordering {\n        Ordering::equal()\n    }\n}\n\nimpl Ord for bool {\n    fn cmp(self, other: bool) -> Ordering {\n        if self {\n            if other {\n                Ordering::equal()\n            } else {\n                Ordering::greater()\n            }\n        } else if other {\n            Ordering::less()\n        } else {\n            Ordering::equal()\n        }\n    }\n}\n\nimpl<T, let N: u32> Ord for [T; N]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T; N]) -> Ordering {\n        let mut result = Ordering::equal();\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<T> Ord for [T]\nwhere\n    T: Ord,\n{\n    // The first non-equal element of both arrays determines\n    // the ordering for the whole array.\n    fn cmp(self, other: [T]) -> Ordering {\n        let mut result = self.len().cmp(other.len());\n        for i in 0..self.len() {\n            if result == Ordering::equal() {\n                result = self[i].cmp(other[i]);\n            }\n        }\n        result\n    }\n}\n\nimpl<A, B> Ord for (A, B)\nwhere\n    A: Ord,\n    B: Ord,\n{\n    fn cmp(self, other: (A, B)) -> Ordering {\n        let result = self.0.cmp(other.0);\n\n        if result != Ordering::equal() {\n            result\n        } else {\n            self.1.cmp(other.1)\n        }\n    }\n}\n\nimpl<A, B, C> Ord for (A, B, C)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n{\n    fn cmp(self, other: (A, B, C)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D> Ord for (A, B, C, D)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n{\n    fn cmp(self, other: (A, B, C, D)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        result\n    }\n}\n\nimpl<A, B, C, D, E> Ord for (A, B, C, D, E)\nwhere\n    A: Ord,\n    B: Ord,\n    C: Ord,\n    D: Ord,\n    E: Ord,\n{\n    fn cmp(self, other: (A, B, C, D, E)) -> Ordering {\n        let mut result = self.0.cmp(other.0);\n\n        if result == Ordering::equal() {\n            result = self.1.cmp(other.1);\n        }\n\n        if result == Ordering::equal() {\n            result = self.2.cmp(other.2);\n        }\n\n        if result == Ordering::equal() {\n            result = self.3.cmp(other.3);\n        }\n\n        if result == Ordering::equal() {\n            result = self.4.cmp(other.4);\n        }\n\n        result\n    }\n}\n\n// Compares and returns the maximum of two values.\n//\n// Returns the second argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::max(1, 2), 2);\n// assert_eq(cmp::max(2, 2), 2);\n// ```\npub fn max<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v1\n    } else {\n        v2\n    }\n}\n\n// Compares and returns the minimum of two values.\n//\n// Returns the first argument if the comparison determines them to be equal.\n//\n// # Examples\n//\n// ```\n// use std::cmp;\n//\n// assert_eq(cmp::min(1, 2), 1);\n// assert_eq(cmp::min(2, 2), 2);\n// ```\npub fn min<T>(v1: T, v2: T) -> T\nwhere\n    T: Ord,\n{\n    if v1 > v2 {\n        v2\n    } else {\n        v1\n    }\n}\n\nmod cmp_tests {\n    use crate::cmp::{max, min};\n\n    #[test]\n    fn sanity_check_min() {\n        assert_eq(min(0 as u64, 1 as u64), 0);\n        assert_eq(min(0 as u64, 0 as u64), 0);\n        assert_eq(min(1 as u64, 1 as u64), 1);\n        assert_eq(min(255 as u8, 0 as u8), 0);\n    }\n\n    #[test]\n    fn sanity_check_max() {\n        assert_eq(max(0 as u64, 1 as u64), 1);\n        assert_eq(max(0 as u64, 0 as u64), 0);\n        assert_eq(max(1 as u64, 1 as u64), 1);\n        assert_eq(max(255 as u8, 0 as u8), 255);\n    }\n}\n",
      "path": "std/cmp.nr"
    },
    "50": {
      "source": "use std::cmp::Ordering;\nuse std::ops::{Add, BitAnd, BitOr, BitXor, Div, Mul, Rem, Shl, Shr, Sub};\n\n// x = 3, y = 9\nfn main(x: u32, y: u32) {\n    let wx = Wrapper::new(x);\n    let wy = Wrapper::new(y);\n\n    // expected x and expected y values\n    let ex: u32 = 3;\n    let ey: u32 = 9;\n\n    assert((wx + wy).inner == ex + ey);\n    assert((wy - wx).inner == ey - ex);\n    assert((wx * wy).inner == ex * ey);\n    assert((wx / wy).inner == ex / ey);\n    assert((wx % wy).inner == ex % ey);\n\n    assert((wx & wy).inner == (ex & ey));\n    assert((wx | wy).inner == (ex | ey));\n    assert((wx ^ wy).inner == (ex ^ ey));\n\n    assert((wy << x as u8).inner == (ey << ex as u8));\n    assert((wy >> x as u8).inner == (ey >> ex as u8));\n\n    assert((wx == wy) == (ex == ey));\n    assert((wx < wy) == (ex < ey));\n    assert((wx <= wy) == (ex <= ey));\n    assert((wx > wy) == (ex > ey));\n    assert((wx >= wy) == (ex >= ey));\n    assert(wx.cmp(wy) == ex.cmp(ey));\n\n    // Ensure operator overloading still works with more complex types\n    let pair_ascending = Pair { x: wx, y: wy };\n    let pair_descending = Pair { x: wy, y: wx };\n\n    assert(pair_ascending != pair_descending);\n\n    assert(pair_ascending < pair_descending);\n    assert(pair_ascending <= pair_descending);\n    assert(pair_descending > pair_ascending);\n    assert(pair_descending >= pair_ascending);\n\n    assert(pair_ascending.cmp(pair_descending) == Ordering::less());\n}\n\nstruct Wrapper {\n    inner: u32,\n}\n\nimpl Wrapper {\n    fn new(inner: u32) -> Self {\n        Wrapper { inner }\n    }\n}\n\nimpl Add for Wrapper {\n    fn add(self, other: Self) -> Self {\n        Wrapper::new(self.inner + other.inner)\n    }\n}\n\nimpl Sub for Wrapper {\n    fn sub(self, other: Self) -> Self {\n        Wrapper::new(self.inner - other.inner)\n    }\n}\n\nimpl Mul for Wrapper {\n    fn mul(self, other: Self) -> Self {\n        Wrapper::new(self.inner * other.inner)\n    }\n}\n\nimpl Div for Wrapper {\n    fn div(self, other: Self) -> Self {\n        Wrapper::new(self.inner / other.inner)\n    }\n}\n\nimpl Rem for Wrapper {\n    fn rem(self, other: Self) -> Self {\n        Wrapper::new(self.inner % other.inner)\n    }\n}\n\nimpl BitAnd for Wrapper {\n    fn bitand(self, other: Self) -> Self {\n        Wrapper::new(self.inner & other.inner)\n    }\n}\n\nimpl BitOr for Wrapper {\n    fn bitor(self, other: Self) -> Self {\n        Wrapper::new(self.inner | other.inner)\n    }\n}\n\nimpl BitXor for Wrapper {\n    fn bitxor(self, other: Self) -> Self {\n        Wrapper::new(self.inner ^ other.inner)\n    }\n}\n\nimpl Shl for Wrapper {\n    fn shl(self, other: u8) -> Self {\n        Wrapper::new(self.inner << other)\n    }\n}\n\nimpl Shr for Wrapper {\n    fn shr(self, other: u8) -> Self {\n        Wrapper::new(self.inner >> other)\n    }\n}\n\nimpl Eq for Wrapper {\n    fn eq(self, other: Self) -> bool {\n        self.inner == other.inner\n    }\n}\n\nimpl Ord for Wrapper {\n    fn cmp(self, other: Self) -> Ordering {\n        self.inner.cmp(other.inner)\n    }\n}\n\nstruct Pair {\n    x: Wrapper,\n    y: Wrapper,\n}\n\nimpl Eq for Pair {\n    fn eq(self, o: Self) -> bool {\n        (self.x == o.x) & (self.y == o.y)\n    }\n}\n\nimpl Ord for Pair {\n    fn cmp(self, o: Self) -> Ordering {\n        let mut result = self.x.cmp(o.x);\n\n        if result == Ordering::equal() {\n            result = self.y.cmp(o.y);\n        }\n\n        result\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_invert",
    "directive_integer_quotient",
    "directive_to_radix"
  ]
}
